--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,14 +5,14 @@
         <div class="col-lg-4 mx-auto">
           <h2 class="text-center mb-4" style="color: white;">Ingresar</h2>
           <div class="auto-form-wrapper">
-            <form action="#">
+            <form [formGroup]="loginForm"  (ngSubmit)="login()">
               <div class="form-group">
                 <label class="label">Usuario</label>
                 <div class="input-group">
-                  <input type="email" class="form-control" placeholder="Email">
+                  <input type="email" class="form-control" placeholder="Email" formControlName="correo">
                   <div class="input-group-append">
                     <span class="input-group-text">
-                      <i class="fa fa-check-circle"></i>
+                      <i class="fa fa-check-circle" *ngIf="loginForm.get('correo')?.valid"></i>
                     </span>
                   </div>
                 </div>
@@ -20,16 +20,16 @@
               <div class="form-group">
                 <label class="label">Contraseña</label>
                 <div class="input-group">
-                  <input type="password" class="form-control" placeholder="*********">
+                  <input type="password" class="form-control" placeholder="*********" formControlName="password">
                   <div class="input-group-append">
                     <span class="input-group-text">
-                      <i class="fa fa-check-circle"></i>
+                      <i class="fa fa-check-circle" *ngIf="loginForm.get('password')?.valid"></i>
                     </span>
                   </div>
                 </div>
               </div>
               <div class="form-group">
-                <button class="btn btn-primary submit-btn btn-block">Login</button>
+                <button class="btn btn-primary submit-btn btn-block" type="submit" [disabled]="loginForm.invalid">Login</button>
               </div>
               
               
