--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -29,7 +29,10 @@
                 </div>
               </div>
               <div class="form-group">
-                <button class="btn btn-primary submit-btn btn-block" type="submit" [disabled]="loginForm.invalid">Login</button>
+                <button class="btn btn-primary submit-btn btn-block" type="submit" [disabled]="loginForm.invalid"*ngIf="!cargando">Login</button>
+                <button class="btn btn-primary submit-btn btn-block" type="button" [disabled]="true" *ngIf="cargando">
+                  <i class="fa fa-spin fa-sync"></i>
+                  Espere...</button>
               </div>
               
               
