--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 
-  <app-navbar></app-navbar>
+  <app-navbar [nombreUsuario] ="nombreUsuario"></app-navbar>
   <div class="page-body-wrapper">
-    <app-sidebar></app-sidebar>
+    <app-sidebar [nombreUsuario] ="nombreUsuario"></app-sidebar>
     <div class="main-panel">
       <div class="content-wrapper">
         <router-outlet></router-outlet>
