--- a/src/app/ingreso-egreso/estadistica/estadistica.component.html
+++ b/src/app/ingreso-egreso/estadistica/estadistica.component.html
@@ -10,7 +10,7 @@
               <div class="float-right">
                 <p class="mb-0 text-right">Ingresos</p>
                 <div class="fluid-container">
-                  <h3 class="font-weight-medium text-right mb-0">$65,650</h3>
+                  <h3 class="fs-5 text-right mb-0">{{totalIngresos | currency}}</h3>
                 </div>
               </div>
             </div>
@@ -30,9 +30,9 @@
                   <i class="fa fa-shipping-fast text-danger icon-lg"></i>
                 </div>
                 <div class="float-right">
-                  <p class="mb-0 text-right">Ingresos</p>
+                  <p class="mb-0 text-right">Egresos</p>
                   <div class="fluid-container">
-                    <h3 class="font-weight-medium text-right mb-0">$65,650</h3>
+                    <h3 class="fs-5 text-right mb-0">{{totalEgresos | currency}}</h3>
                   </div>
                 </div>
               </div>
@@ -42,4 +42,46 @@
             </div>
           </div>
         </div>
+</div>
+
+
+<div class="row m-5">
+  
+  <div class="col-12">
+      <div class="card card-statistics">
+        <div class="card-body">
+
+            <div class="clearfix">
+                <div class="float-left">
+                  <i class="fa fa-building text-info icon-lg"></i>
+                </div>
+                <div class="float-right">
+                  <p class="mb-0 text-right">Diferencia</p>
+                  <div class="fluid-container">
+                    <h3 [ngClass]="{
+                      'text-success': totalIngresos - totalEgresos > 0,
+                      'text-danger': totalIngresos - totalEgresos < 0
+                    }"
+                        class="fs-5 text-right mb-0">
+                      {{ totalIngresos - totalEgresos | currency }}
+                    </h3>
+                  </div>
+                </div>
+              </div>
+        
+        
+        </div>    
+    </div>
+  </div>
+
+  <div class="col-12 p-5" *ngIf="ingresos > 0 || egresos > 0">
+      <div class="card card-statistics">
+        <div class="card-body">
+          <h1 class="card-title">Gráfica</h1>
+
+          
+        </div>
+      </div>
+  </div>
+
 </div>
