--- a/src/app/ingreso-egreso/ingreso-egreso.component.html
+++ b/src/app/ingreso-egreso/ingreso-egreso.component.html
@@ -7,12 +7,13 @@
               Especifique el monto y el tipo
             </p>
 
-            <form>
+            <form [formGroup]="ingresoForm" (ngSubmit)="guardar()">
               
-              <div class="form-group">
+              <div class="form-group" >
                 <label>Descripción</label>
                 <input type="text" 
                        class="form-control" 
+                       formControlName="descripcion"
                        placeholder="Descripción"
                        name="descripcion">
               </div>
@@ -22,6 +23,7 @@
                   <input type="number" 
                          class="form-control" 
                          placeholder="Monto"
+                         formControlName="monto"
                          name="monto">
                     <p>
                       Debe de ser un monto positivo
@@ -31,14 +33,16 @@
               <div class="form-group">
                   <label>Tipo</label>
                   <br>
-                  <button type="button" class="btn btn-primary btn-block">Ingreso</button>
-                  <!-- <button type="button" class="btn btn-warning btn-block">Egreso</button> -->
+                  <button *ngIf="tipo==='ingreso'" (click)="tipo='egreso'" type="button" class="btn btn-primary btn-block">Ingreso</button>
+                  <button *ngIf="tipo==='egreso'" (click)="tipo='ingreso'" type="button" class="btn btn-warning btn-block">Egreso</button>
               </div>
 
               <hr>
-              <button type="button" class="btn btn-success mr-2">
-                <i class="fa fa-save"></i>
-                Agregar
+              <button type="submit" class="btn btn-success mr-2" [disabled]="ingresoForm.invalid">
+                <i class="fa fa-save" *ngIf="!cargando"></i>
+                <i class="fa fa-spin fa-sync" *ngIf="cargando"></i>
+                {{ cargando ? 'Guardando...'  :'Agregar' }}
+                
               </button>
 
               <!-- 
